--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.ppi.oss</groupId>
     <artifactId>thymeleaf-bootstrap2</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <name>thymeleaf-bootstrap2</name>
     <description>Thymeleaf dialect for support of bootstrap2</description>
     <url>https://github.com/ppi-ag/thymeleaf-bootstrap2</url>
@@ -207,7 +206,7 @@
         <url>https://github.com/ppi-ag/thymeleaf-bootstrap2</url>
         <connection>scm:git:https://github.com/ppi-ag/thymeleaf-bootstrap2.git</connection>
         <developerConnection>scm:git:git@github.com:ppi-ag/thymeleaf-bootstrap2.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>thymeleaf-bootstrap2-0.1</tag>
     </scm>
 </project>
 
