--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.ppi.oss</groupId>
     <artifactId>thymeleaf-bootstrap2</artifactId>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <name>thymeleaf-bootstrap2</name>
     <description>Thymeleaf dialect for support of bootstrap2</description>
     <url>https://github.com/ppi-ag/thymeleaf-bootstrap2</url>
@@ -206,7 +206,7 @@
         <url>https://github.com/ppi-ag/thymeleaf-bootstrap2</url>
         <connection>scm:git:https://github.com/ppi-ag/thymeleaf-bootstrap2.git</connection>
         <developerConnection>scm:git:git@github.com:ppi-ag/thymeleaf-bootstrap2.git</developerConnection>
-        <tag>thymeleaf-bootstrap2-0.1</tag>
+        <tag>HEAD</tag>
     </scm>
 </project>
 
